src/main/java/org/example/mobble/_util/error/ex/Exception302.java
package org.example.mobble._util.error.ex;

public class Exception302 extends RuntimeException {
    public Exception302(String message) {
        super(message);
    }
}
